--- a/404.html
+++ b/404.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html><html  data-capo=""><head><meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>:root{--dark-blue:#153448;--light-blue:#3c5b6f;--dark-beige:#948979;--light-beige:#dfd0b8}a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{border:0;margin:0;padding:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:"";content:none}table{border-collapse:collapse;border-spacing:0}</style>
-<link rel="modulepreload" as="script" crossorigin href="/Budget/_nuxt/DXeDWYFy.js">
-<link rel="prefetch" as="script" crossorigin href="/Budget/_nuxt/-UNttd0V.js">
-<link rel="prefetch" as="script" crossorigin href="/Budget/_nuxt/DCukz4mm.js">
-<link rel="prefetch" as="script" crossorigin href="/Budget/_nuxt/W0CnALYk.js">
-<script type="module" src="/Budget/_nuxt/DXeDWYFy.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1739972384137,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/Budget/",buildId:"dac72a99-5633-412f-917a-f8ca40fdb7ca",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<link rel="modulepreload" as="script" crossorigin href="/Budget/_nuxt/hbV8BQWq.js">
+<link rel="prefetch" as="script" crossorigin href="/Budget/_nuxt/D2OgCMJa.js">
+<link rel="prefetch" as="script" crossorigin href="/Budget/_nuxt/DmJO9_Iw.js">
+<link rel="prefetch" as="script" crossorigin href="/Budget/_nuxt/P8RPJDff.js">
+<script type="module" src="/Budget/_nuxt/hbV8BQWq.js" crossorigin></script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1739975164946,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{},app:{baseURL:"/Budget/",buildId:"ad061813-7155-473f-ab88-3170967b58a2",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
